--- a/index.Rmd
+++ b/index.Rmd
@@ -5,5 +5,16 @@ output:
     toc: true
     toc_float: true
 ---
+P8105 Fall 2022
 
+* Raenita Spriggs (rs4390)
+* Kevin Patterson (kpp2126)
+* Lindsey Covell (ltc2121)
+* Gabriela Jackson (glij2117)
+* Alana Ferris (af3341)
+
+img src="images/nutrition label.jpg" style="width:75%"
+
+---
+![](images/NYC_Downtown_Manhattan_Skyline_seen_from_Paulus_Hook_2019-12-20_IMG_7347_FRD_(cropped).jpg)
 
