--- a/index.Rmd
+++ b/index.Rmd
@@ -1,11 +1,11 @@
 ---
-title: "P8105 Final Project- Nutrtritional Data in NYC"
+title: "Just How Fast is Fast Food Changing in NYC?"
 output: 
   html_document:
     toc: true
     toc_float: true
 ---
-P8105 Fall 2022
+## P8105 Final Project Fall 2022
 
 * Raenita Spriggs (rs4390)
 * Kevin Patterson (kpp2126)
@@ -13,7 +13,9 @@ P8105 Fall 2022
 * Gabriela Jackson (glij2117)
 * Alana Ferris (af3341)
 
-img src="images/nutrition label.jpg" style="width:75%"
+---
+
+![](images/nutrition label.jpg)
 
 ---
 ![](images/NYC_Downtown_Manhattan_Skyline_seen_from_Paulus_Hook_2019-12-20_IMG_7347_FRD_(cropped).jpg)
