--- a/project_report.Rmd
+++ b/project_report.Rmd
@@ -59,3 +59,17 @@ Then each model used the same set of predictors which included proportion of the
 ## Discussion
 
 Distribution of calories remained roughly the same over all years, whereas trans fat and protein distributions seemed to increase. When visualizing nutritional content by food category, we see that sit-down restaurants have the highest calorie and fat distribution over all food categories. When it comes to protein, convenience stores and beverages/desserts have the highest protein distributions (albeit with much larger error bar ranges). This is likely due to the offering of protein bars and protein shakes at these types of establishments, that are not offered at regular or sit-down fast food restaurant chains. With an increase of public awareness and initiatives for healthy eating since 2008, we would have expected that calories and trans fat distributions would decrease over time, rather than remain constant. 
+
+## References
+
+1.	Vastine WJ. THE CONVENIENCE STORE INDUSTRY IN THE 1990s AND BEYOND. International Journal of Retail & Distribution Management. 1991;19(6). doi:10.1108/EUM0000000002953
+2.	Ozbun T. Convenience stores in the U.S. - Statistics & Facts. Statista. Published January 27, 2022. Accessed November 10, 2022. https://www.statista.com/topics/3869/convenience-stores-in-the-us/
+3.	U.S. Convenience Store Count. Accessed November 10, 2022. https://www.convenience.org/Research/FactSheets/IndustryStoreCount
+4.	Frank L, Glanz K, McCarron M, Sallis J, Sealens B, Chapman J. The Spatial Distribution of Food Outlet Type and Quality around Schools in Differing Built Environment and Demographic Contexts. Berkeley Planning Journal. 2006;19(1). doi:10.5070/BP319111490
+5.	Walker RE, Block J, Kawachi I. The Spatial Accessibility of Fast food Restaurants and Convenience Stores in Relation to Neighborhood Schools. Appl Spatial Analysis. 2014;7(2):169-182. doi:10.1007/s12061-013-9095-6
+6.	Rodríguez-Guerra AI, López-Olmedo N, Medina C, Hernández-Alcaraz C, Ortega-Avila AG, Barquera S. Association between density of convenience and small grocery stores with diet quality in adults living in Mexico City: A cross sectional study. Frontiers in Public Health. 2022;10. Accessed November 10, 2022. https://www.frontiersin.org/articles/10.3389/fpubh.2022.857754
+7.	Sharkey JR, Dean WR, Nalty C. Convenience stores and the marketing of foods and beverages through product assortment. Am J Prev Med. 2012;43(3 Suppl 2):S109-115. doi:10.1016/j.amepre.2012.05.012
+8.	Morland K, Diez Roux AV, Wing S. Supermarkets, other food stores, and obesity: the atherosclerosis risk in communities study. Am J Prev Med. 2006;30(4):333-339. doi:10.1016/j.amepre.2005.11.003
+9.	Powell LM, Auld MC, Chaloupka FJ, O’Malley PM, Johnston LD. Associations between access to food stores and adolescent body mass index. Am J Prev Med. 2007;33(4 Suppl):S301-307. doi:10.1016/j.amepre.2007.07.007
+10.	Larson NI, Story MT, Nelson MC. Neighborhood Environments: Disparities in Access to Healthy Foods in the U.S. American Journal of Preventive Medicine. 2009;36(1):74-81.e10. doi:10.1016/j.amepre.2008.09.025
+
