--- a/project_report.Rmd
+++ b/project_report.Rmd
@@ -51,9 +51,89 @@ Lastly, nutritional metrics and restaurant type were combined. We created a box 
 
 We evaluated the relationship between the proportion of a sit down and fast food restaurant to occur in a zip code and relevant sociodemographic predictors. We used linear and logistic models at the zip code level to estimate proportion of restaurant type based on proportions of race (white, other, bipoc), sex (male and female), and median household income (aggregated estimate at the zip code or ZCTA level). We hypothesize that there are differential proportional declines by racial category and household income in correspondence with having a higher fast food restaurant occurrence proportional to any other type of restaurant. 
 
+```{r}
+
+##Linear regression plots: fast food 
+#female 
+fem_ff = ggplot(total_rest_acs, aes(x = prop_female, y = prop_fast)) +
+  geom_point() +
+  geom_smooth(method = "lm", col = "red") +
+  labs(
+    title = "Proportion of Fast Food Restaurants by Proportion of Female in Population",
+    x = "Proportion of Female Residents",
+    y = "Proportion of Fast Food Restaurants"
+  )
+```
+## Interpretation: as female proportion increases fast food prop decreases
+
+#bipoc 
+```{r}
+bipoc_ff = ggplot(total_rest_acs, aes(x = prop_bipoc, y = prop_fast)) +
+  geom_point() +
+  geom_smooth(method = "lm", col = "red") +
+  labs(
+    title = "Proportion of Fast Food Restaurants by Proportion of BIPOC in Population",
+    x = "Proportion of BIPOC Residents",
+    y = "Proportion of Fast Food Restaurants"
+  )
+```
+## interpretation: as BIPOC proportion increases fast food prop increases
+
+#medincome
+```{r}
+med_in_ff = ggplot(total_rest_acs, aes(x = med_income, y = prop_fast)) +
+  geom_point() +
+  geom_smooth(method = "lm", col = "red") +
+  labs(
+    title = "Proportion Fast Food Restaurants by Median income",
+    x = "Median Income",
+    y = "Proportion of Fast Food Restaurants"
+  )
+```
+## Interpretation: as median income increases fast food prop SLIGHTLY decreases
+```
+
 The hypothesis of these models was to see how the identified sociodemographic variables would impact the presence of a restaurant type throughout zip codes in NYC. To perform these analyses we had to further modify the restaurant location dataframe and create proportions of restaurant type for each zip code. We also mutated a factored binary variable for restaurant type by zip code with 1 representing the restaurant type is present and 0 representing the restaurant type was absent. This manipulated restaurant type dataframe was joined with the ACS dataframe by zip code to create a total dataframe with all variables needed for analysis. 
 
 Then each model used the same set of predictors which included proportion of the population that identifies as white, proportion of the population that identifies in a BIPOC racial category, proportion of the population that identifies as ‘other’, proportion of the population that identifies with the biological sex female, and the median household income. The first linear model utilized OLS regression to look at the outcome, proportion of fast food restaurants, based on the described predictors. The second model incorporated a binary logistic regression to look at the outcome of a factor variable which indicated the presence or absence of a fast food restaurant. The method used for both the linear and logistic models was repeated for the outcome of sit down restaurants which was represented as a proportion and binary factor variable respectively for each model type. The linear fit for the predictors female, BIPOC and median income were graphed for each of the four models described above to further illustrate the relationships within the models. 
+```{r}
+##model lm 
+#proportion of fast food prediction
+fit.fast <- lm(prop_fast ~ prop_white + prop_bipoc + prop_female + prop_other + med_income, data = total_rest_acs)
+
+#summary(fit.fast)
+fit_table_fast = fit.fast %>% 
+  broom::tidy() %>% 
+    knitr::kable(digits = 3)
+
+#proportion of sit down prediction
+fit.sit <- lm(prop_sit ~ prop_white + prop_bipoc + prop_female + prop_other + med_income, data = total_rest_acs)
+
+#summary(fit.sit)
+fit_table_sit = fit.sit %>% 
+  broom::tidy() %>% 
+    knitr::kable(digits = 3)
+
+
+#model glm 
+#sit down
+fit.logit.sit <- glm(logit_sit ~ prop_white + prop_bipoc + prop_female + prop_other + med_income, data = total_rest_acs, family = "binomial")
+
+summary(fit.logit.sit)
+
+logit_table_sit = fit.logit.sit %>% 
+  broom::tidy() %>% 
+    knitr::kable(digits = 3)
+
+#fast food
+fit.logit.fast <- glm(logit_fast ~ prop_white + prop_bipoc + prop_female + prop_other + med_income, data = total_rest_acs, family = "binomial")
+
+summary(fit.logit.fast)
+
+logit_table_fast = fit.logit.fast %>% 
+  broom::tidy() %>% 
+    knitr::kable(digits = 3)
+```
 
 
 ## Discussion
