--- a/project_report.Rmd
+++ b/project_report.Rmd
@@ -7,6 +7,61 @@ output:
     theme : cosmo
 ---
 
+```{r, echo = FALSE}
+library(tidyverse)
+library(tidyverse)
+library(p8105.datasets)
+library(viridis)
+library(ggplot2)
+library(patchwork)
+library(dplyr)
+library(readxl)
+library(tidycensus)
+library(rvest)
+library(labelled)
+```
+
+
+```{r, echo = FALSE}
+menustat_df = read_csv("./data/menustat_combined.csv")
+rest_locations = read_csv("./data/restaurant_location.csv")
+
+rest_locations_new = rest_locations %>%
+  group_by(zipcode, rest_type) %>%
+  summarise(num_rest_type = n()) %>% 
+  pivot_wider(
+    names_from = "rest_type", 
+    values_from = "num_rest_type"
+  ) %>% 
+  drop_na(zipcode) %>% 
+  replace(is.na(.), 0) %>% 
+  rename(fast_food = `fast food`,
+         sit_down = `sit-down`) %>%
+  mutate(total = beverages_dessert + fast_food + sit_down, 
+         prop_bev = beverages_dessert/total, 
+         prop_fast = fast_food/total, 
+         prop_sit = sit_down/total, 
+         logit_sit = ifelse(sit_down > 0, 1, 0),
+         logit_fast = ifelse(fast_food > 10, 1, 0)) %>% 
+  select(-c(total)) 
+
+#frequency of fast food outlets within a zipcode > median
+#rest_locations_new %>%
+#  mutate(fast_food = as.numeric(fast_food)) %>%
+#  summarise(median = median(fast_food))
+  
+
+#DATAFRAME 2: ACS
+nyc_acs = read_csv("data/nyc_acs_reg")
+
+## JOIN ##
+
+total_rest_acs = left_join(rest_locations_new, nyc_acs, by = "zipcode") %>% 
+  drop_na()
+
+```
+
+
 ## Motivation
 
 The overarching goal of this project was to analyze nutritional data collected for popular restaurants for any geographic trends (i.e. clusters of fast food restaurants in specific neighborhoods) in relation to potential health outcomes within NYC communities. The growing number of fast-food chains in the United States has pushed the US into an era of food "convenience." Since the industry’s inception in 1927, there are approximately 150 thousand convenience stores across the US as of 2020.1–3 Their presence is ubiquitous; however, little is known about the general distribution of fast-food chains in the US. In cities like New York there seems to be a new chain on every corner of the city. They provide quick and cheap food options, alongside fast food chains, which could be the only option for many communities. Convenience stores and fast food outlets alike are known to sell food products high in fats, sugars, and salts.7 The presence of convenience stores and fast food restaurants has been associated with higher BMI, higher obesity, and increased hypertension.8,9 Residents of color living in rural, low-income neighborhoods have inadequate access to supermarkets, chain grocery stores, and diversity in food products.10 
