--- a/statistical_analysis.Rmd
+++ b/statistical_analysis.Rmd
@@ -8,13 +8,13 @@ output:
 ---
 
 ### Statistical Analysis
-```{r}
+```{r, warning = FALSE, message = FALSE}
 menustat_df = read_csv("data/menustat_combined.csv")
 rest_locations = read_csv("data/restaurant_location.csv")
 ```
 
 
-```{r frequency}
+```{r frequency, warning = FALSE, message = FALSE}
 rest_locations %>%
   select(restaurant, rest_type) %>%
   arrange(rest_type) %>%
@@ -103,7 +103,7 @@ menustat_df %>%
 ff_cal + sd_cal + bevdes_cal + conv_cal
 ```
 
-```{r summarise}
+```{r summarise, warning = FALSE, message = FALSE}
 ####calculations for calories, total_fat, sodium, carbohydrates, sugar
 ##calories 
 #mean calories
@@ -184,7 +184,7 @@ menustat_df %>%
 
 ## NEW Model data/ building 
 
-```{r}
+```{r, warning = FALSE, message = FALSE}
 ## creates the total_rest_acs dataframe 
 
 #DATAFRAME 1:REST 
@@ -224,7 +224,7 @@ total_rest_acs = left_join(rest_locations_new, nyc_acs, by = "zipcode") %>%
 ## with drop_na (taking away NAs in nyc_acs proportions) we went from 172 to 167 zipcodes 
 ```
 
-```{r}
+```{r, warning = FALSE, message = FALSE}
 ##model lm 
 #proportion of fast food prediction
 fit.fast <- lm(prop_fast ~ prop_white + prop_bipoc + prop_female + prop_other + med_income, data = total_rest_acs)
@@ -265,7 +265,7 @@ logit_table_fast = fit.logit.fast %>%
 
 # plots 
 
-```{r}
+```{r, warning = FALSE, message = FALSE}
 ##Linear regression plots: fast food 
 #female 
 fem_ff = ggplot(total_rest_acs, aes(x = prop_female, y = prop_fast)) +
